remove more dead code and increase test coverage. fix some edge cases.